Use InferenceProvider in TransportBulkAction instead of directly invoking the InferenceAction